# sway-overfocus

./: Cargo.toml  LICENSE  README.md  notes.md  usage.md
src/: algorithm.rs  main.rs  parse.rs  tree.rs
