[package]
name = "sway-overfocus"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
log = "0.4.17"
swayipc = "3.0.1"

[target.'cfg(profile = "debug")'.dependencies]
env_logger = "0.10.0"
